# tree-sitter-wgsl

./: Cargo.toml  grammar.js
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
