[package]
name = "tree-sitter-wgsl"
description = "WGSL grammar for tree-sitter (Quilt fork with hole support)"
version = "0.0.1"
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "wgsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/QuiltLang/tree-sitter-wgsl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
